--- a/posts/1.1.pre_llm.md
+++ b/posts/1.1.pre_llm.md
@@ -242,23 +242,41 @@ L20缺乏高速NVLink，卡间通信只能依赖于PCIE 4.0（速率约16-22GB/s
 
 ### 一些注意点
 
-F是理论flops, B是理论访存bandwidth
-
-延时=max(2mkn/F, (mk+kn+mn)/B)
-
-如果是方阵m=n=k,xxx
-
-==>越长条形的矩阵越容易进入访存bound
-
-x=F/B
-
-如果一个模型算出来的x比上面这个x小,那一定是访存 bound，没必要优化
-
 美国的芯片禁令主要是减小带宽
 
-要优化mfu：
-1. 让它是计算bound
-2. 加快通信
+
+F是理论flops, B是理论访存带宽，模型的计算flops是f，模型的访存是b，MFU=f/F
+
+一个$m\times k$和$k\times n$的矩阵乘法的延时就是$$max(2mkn/F, (mk+kn+mn)/B)$$
+
+roofline：参考[Roofline: An Insightful Visual Performance Model for Floating-Point Programs and Multicore Architectures](https://people.eecs.berkeley.edu/~kubitron/cs252/handouts/papers/RooflineVyNoYellow.pdf)
+
+计算强度(Arithmetic Intensity, AI)$$AI_{max}=F/B,\ AI=f/b$$，计算强度其实就是每加载1字节数据，能做多少计算，
+
+![](../assets/roofline.png)
+
+图的纵轴是flops，横轴是AI，算力决定“屋顶”的高度；带宽决定“房檐”的斜率
+
++ 计算瓶颈(Compute-Bound)：模型的AI大于$$AI_{max}$$时，模型把大部分时间花费在计算上，MFU较高
++ 访存瓶颈(Memory-Bound)：当模型的AI小于$$AI_{max}$$时，模型把大部分时间花费在读写显存上，MFU较低
+
+一些常见结构的瓶颈：
+
++ 大型矩阵乘（GEMM：Attention QK/KV/FFN）：AI非常高==>计算bound
++ LayerNorm/RMSNorm/SwiGLU/BiasAdd/Dropout：AI极低，基本不计算，只是HBM读写==>访存bound
++ 越长条形的矩阵（某一维特别小）越容易进入访存bound，因为tile和warp很难排满，Tensor Core 吃不饱，导致AI下降。
+
+优化MFU的主要手段：
+
+1. 让模型更加计算bound
+    + batchsize变大：可以减少kernel启动次数
+    + kernel融合：把多个细碎算子合并成一个大算子
+    + 增加并行度：让TP变大（例如从1变成8），这样模型能算更大矩阵乘，而大GEMM的MFU是高的
+    + 减少CPU/GPU之间等待：例如dataloader读数据慢
+2. 加快通信：
+    + 提高通信带宽：卡内nvlink通信、卡间网络通信
+    + 减小通信量：例如通信量```ZeRO1<ZeRO2<ZeRO3```
+    + 更好的通信调度：把计算和通信overlap，即在GPU上跑某个compute kernel（例如GEMM）时，不阻塞通信（NCCL allreduce/allgather）等，例如Megatron-LM的```--overlap-grad-reduce```和```--overlap-param-gather```
 
 流水线：
 
@@ -267,26 +285,18 @@ x=F/B
 tensor core：专门算矩阵乘
 cuda core：算特征函数，例如exp，elementwise乘
 
-
 华为卡：算dropout很挫,模型里尽量不要有这个算子
 
 因为dropout的随机数发生器，底层是用cuda core里的计算，但华为有一个指令没在底层支持，所以后来专门搞了一个芯片来产生随机数，但这样就有带宽问题
-
 
 flash-attn的核心：搬到sram上
 
 ==>L和D的关系，决定fa的收益
 
-
 triton最简单的是做fuse，即节省访存
 
 pytorch的compile会自己fuse
 
-
-roofline：[Roofline Model与深度学习模型的性能分析](https://zhuanlan.zhihu.com/p/34204282)
-
-+ 计算瓶颈：不管模型的计算强度有多大，它的理论性能最大只能等于计算平台的算力。当模型的计算强度 大于计算平台的计算强度上限时，模型在当前计算平台处于 Compute-Bound状态
-+ 访存瓶颈：当模型的计算强度小于计算平台的计算强度上限时，由于此时模型位于“房檐”区间，因此模型理论性能的大小完全由计算平台的带宽上限（房檐的斜率）以及模型自身的计算强度所决定，因此这时候就称模型处于Memory-Bound状态。
 
 ## Transformer加速
 
