--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -3240,6 +3240,10 @@ guided embedding：prompt里包含m个aspect，让模型给出每个aspect的打
 
 ![](../assets/gream-onerecthink.jpg)
 
+## PersonaX
+
+[PersonaX: A Recommendation Agent-Oriented User Modeling Framework for Long Behavior Sequence](https://arxiv.org/pdf/2503.02398v1)
+
 
 # LLM+推荐：Foundation/蒸馏/其他
 
