--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -3937,6 +3937,8 @@ MobileNet-v5支持
 
 [Gemini 3深夜来袭：力压GPT 5.1，大模型谷歌时代来了](https://mp.weixin.qq.com/s/m5DnddinQuH_SxXEyUbYaA?poc_token=HCNkHWmjIJiuSBFCEk9z-r8_RnhTld9axD37VFCy)
 
+[拆解Gemini 3：Scaling Law的极致执行与“全模态”的威力【101直播】](https://mp.weixin.qq.com/s/T6-xzbPm1ZftgK1wzi4l2A)
+
 Gemini 3 Pro：
 
 + 以1501 Elo的突破性高分登顶LMArena Leaderboard，在Humanity’s Last Exam（在不使用任何工具的情况下达到 37.5%）和GPQA Diamond（91.9%）上获得最高分，展示了博士级的推理能力。它还在数学方面为前沿模型树立了新标准，在MathArena Apex上达到了23.4%的最新SOTA水平。
