--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1224,6 +1224,7 @@ All-domain Moveline Evolution Network (AMEN)：
 
 [OneLoc: Geo-Aware Generative Recommender Systems for Local Life Service](https://arxiv.org/pdf/2508.14646)
 
+
 ## 字节的LONGER
 
 [LONGER: Scaling Up Long Sequence Modeling in Industrial Recommenders](https://arxiv.org/abs/2505.04421)
@@ -2098,6 +2099,17 @@ def run():
     config.vocab_size = target_vocab_size
 ```
 
+## 快手的Align3GR
+
+[Align3GR: Unified Multi-Level Alignment for LLM-based Generative Recommendation](https://arxiv.org/pdf/2511.11255)
+
+![](../assets/align3gr.png)
+
+![](../assets/align3gr-arch.png)
+
+![](../assets/behavior-modeling-level-align.png)
+
+基于llama2-7b
 
 ## 字节的HLLM-Creator
 
