--- a/posts/6.llm_math.md
+++ b/posts/6.llm_math.md
@@ -34,7 +34,7 @@
 [https://github.com/GraphPKU/Case_or_Rule](https://github.com/GraphPKU/Case_or_Rule)
 
 
-## AlphaProof(nature)
+# AlphaProof(nature)
 
 [Olympiad-level formal mathematical reasoning with reinforcement learning](https://www.nature.com/articles/s41586-025-09833-y)
 
