--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -4313,6 +4313,21 @@ $$
 
 ![](../assets/dgenctr-model.png)
 
+## 阿里的STORE
+
+[STORE: Semantic Tokenization, Orthogonal Rotation and Efficient Attention for Scaling Up Ranking Models](https://arxiv.org/pdf/2511.18805v1)
+
+![](../assets/store.jpg)
+
++ 将item id映射成语义id：item id高基数，语义id空间更稳定。用了OPMQ（Orthogonal, Parallel, Multi-expert Quantization），大概就是encoder里有多个专家，加了个正交loss让各专家尽量不同
++ Orthogonal Rotation Transformation：低基数的特征人工分成K个组，concat后和K个正交矩阵乘，得到K个输出。同样加了loss限制各正交矩阵越远越好
++ 高效Attention：就是Kimi的MoBA
+
+sid有效缓解了one-epoch现象，这个结构有一些关于sid数和层数的scaling law
+
+![](../assets/store-1epoch.png)
+
+有个疑问，这是个啥场景，gauc低可以理解，但auc咋也0.6几？
 
 ## 快手的KuaiFormer
 
