--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -24,3 +24,10 @@ llm训练时的teacher forcing机制：生成第i个token的输入：
 
 ![](../assets/prefix-tuning-params.png)
 
+
+# 一些常用的参数
+
++ temperature：**控制不同词的概率差距**。当调小时，x/T变大，然后经过exp会指数放大，这样高logit的会变得更巨大，词的差距会被拉大，所以模型的输出会更稳定，输出结果更确定；反之不同词的差距更小，输出更多样
++ top-p：**控制长尾词的概率阈值**。top cummulative probability，是一个门槛，即从第一名往下数，累加后的概率大于p时，把后面的词扔掉，剩下的词再softmax，并去采样。调低会去掉长尾，输出稳定；调高会放低门槛，输出多样
+
+temperature和top-p虽然原理不同，但均是越大越多样，适用创作等场景；越小越稳定，适用于代码、数学
