--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -84,6 +84,8 @@ meta发的[LLM-Rec: Personalized Recommendation via Prompting Large Language Mod
 
 25.10综述：[A Survey on Generative Recommendation: Data, Model, and Tasks](https://arxiv.org/pdf/2510.27157)
 
+25.12综述：[A Survey of Generative Recommendation from a Tri-Decoupled Perspective: Tokenization, Architecture, and Optimization](https://www.preprints.org/frontend/manuscript/9f1a828cd4f9b5f57b729f03832f1c96/download_pub) 
+
 ## reasoning LLM4rec综述
 
 [大模型时代下的推理型推荐系统最新综述](https://mp.weixin.qq.com/s/VxwmzvTJ65LCnyevmLlTug)：[Towards Reasoning-Aware Recommender Systems: A Survey in the LLM Era](https://www.researchgate.net/publication/397223831_Towards_Reasoning-Aware_Recommender_Systems_A_Survey_in_the_LLM_Era)
