--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -2102,6 +2102,12 @@ def run():
     config.vocab_size = target_vocab_size
 ```
 
+## 快手的OpenOneRec
+
+[OpenOneRec Technical Report](https://arxiv.org/pdf/2512.24762)
+
+[https://huggingface.co/OpenOneRec](https://huggingface.co/OpenOneRec)；[https://github.com/Kuaishou-OneRec/OpenOneRec](https://github.com/Kuaishou-OneRec/OpenOneRec)
+
 ## 快手的Align3GR
 
 [Align3GR: Unified Multi-Level Alignment for LLM-based Generative Recommendation](https://arxiv.org/pdf/2511.11255)
