--- a/posts/5.llm_agentic.md
+++ b/posts/5.llm_agentic.md
@@ -730,3 +730,10 @@ Universal Deep Research，输入有strategy和prompt
 
 [A Survey of Context Engineering for Large Language Models](https://arxiv.org/a/2507.13334)
 
+# VeRL
+
+[https://github.com/verl-project/verl](https://github.com/verl-project/verl)
+
+[HybridFlow: A Flexible and Efficient RLHF Framework](https://arxiv.org/pdf/2409.19256v2)
+
+工业界RL的比较通用的代码库，像OpenRLHF、trl那些可以拿来学习基本原理和跑小模型，大的模型一般还是VeRL
