--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -3384,6 +3384,19 @@ $$
 
 [Realizing Scaling Laws in Recommender Systems: A Foundation–Expert Paradigm for Hyperscale Model Deployment](https://www.arxiv.org/pdf/2508.02929)
 
+## Meta的LLaTTE
+
+[LLaTTE: Scaling Laws for Multi-Stage Sequence Modeling in Large-Scale Ads Recommendation](https://arxiv.org/pdf/2601.20083)
+
+![](../assets/llatte.png)
+
++ 非序列建模：用DHEN
++ 序列建模：
+    + transformer用MLA，上游模型的query没有target item的信息，下游模型有
+    + 金字塔结构：深层扔掉一些老的token，参考字节tt电商的onetrans：[ OneTrans: Unified Feature Interaction and Sequence Modeling with One Transformer in Industrial Recommender](https://arxiv.org/pdf/2510.26104)
+    + readout：把最后一层的query token输出存下来，给下游模型用
+
+![](../assets/llatte-query.png)
 
 ## 腾讯的LFM4Ads
 
