--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1354,6 +1354,7 @@ mask：target之间互相不可见，但每个target都能看到所有历史
 和tiger很像，主要区别是除了原来rq的code，还加了个dense emb进去
 
 ![](../assets/cobra.png)
+
 rq部分freeze，dense是拿item的明文特征过一个bert得到的cls emb，bert是训练的
 
 decode出来有两个东西，rq的code和dense
@@ -1369,6 +1370,29 @@ decode出来有两个东西，rq的code和dense
 [百万美金背后的推荐技术突破，内部揭秘2025年百度最高奖获奖“心流”团队的背后故事](https://mp.weixin.qq.com/s/O4iqt1ADCWwKNEq0hCyMrg)
 
 [让推荐更懂你：百度2025最高奖‘心流’团队的标题改写实战](https://mp.weixin.qq.com/s/IDzjnXMw9NXHZXZue7RQKQ)
+
+## 百度的GRAB
+
+[GRAB: An LLM-Inspired Sequence-First Click-Through Rate Prediction Modeling Paradigm](https://www.arxiv.org/pdf/2602.01865)
+
+![](../assets/grab1.png)
+
+输入多个用户的序列，过统一的trans，然后目标好像不是自回归，应该是ranking
+
+![](../assets/grab2.png)
+
+序列压缩，把不同用户的序列合并成一条序列，然后加上对应的mask，保证用户间不可见，用户内causal
+
+![](../assets/grab-partial-full-mask.png)
+
+单用户内部，每一个item又拆成了2个token：
+
++ partial token：图中的h，只保留随时间变化、对刻画历史有用的信息（例如context、相对位置/时间），把静态或高度重复的字段丢掉（例如user_id、长期稳定兴趣），只能看到t-1时刻往前的partial和自己
++ full token：图中的h'，保留打分所需的完整信息（例如uid+target itemid），只能看到t时刻往前（图中可能漏了t时间）的partial和自己，看不到其他所有full
+
+![](../assets/grab-rab.png)
+
+rab（time+pos+action），然后带上滑窗mask（即q只能看到前面若干长度的k）
 
 ## 腾讯的GPR
 
