--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -4225,6 +4225,13 @@ BlockRank通过以下方式改进LLM的注意力操作：
 
 该采用由多个LLM驱动的智能体构成的模块化体系(Master、Planner、Executor和Writer)，能够动态适应从简单事实查询到复杂多阶段推理任务的各类信息需求。这些智能体通过动态协同的工作流程，评估查询复杂性，在Master的判断和指导下对应不同任务的特性的智能体动态组合，并针对复杂任务将问题分解为可执行的任务,并协调使用各种工具进行任务执行与内容合成。
 
+## 百度的RELATE
+
+[RELATE: A Reinforcement Learning-Enhanced LLM Framework for Advertising Text Generation](https://arxiv.org/pdf/2602.11780)
+
+![](../assets/relate.png)
+
+基于qwen3，参考grpo，设计了token-level和sentence-level的reward
 
 ## 美团的IterQR
 
