--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -86,5 +86,25 @@ $$
 + $$r$$是策略模型和参考模型的比值，即一个隐式的奖励模型
 + 策略模型是复制的sft模型，参考模型一般也是复制sft模型，有些时候可以选一个更复杂的模型，但要注意两者的kl散度和训练数据分布不要差太多
 
+## DPO流程
 
+![](../assets/dpo-training.png)
 
++ concat：将$$x$$和$$y_w$$与$$y_l$$分别concat，作为策略模型和参考模型的输入（实际会将三者concat一起）
++ gather：算完logit和softmax后，再把y部分的拿出来，算出隐式奖励，再算Loss
+
+## beta作用
+
+在RLHF中，$$\beta$$和最终奖励$$=r(x,y)$$、最终奖励$$=r_{\phi}(x,y)$$的关系如下，
+
+$$
+r(x,y)=r_{\phi}(x,y)-\beta (log \pi _{\theta}(y|x)-log \pi _{ref}(y|x))
+$$
+
++ $$\beta$$很小时，策略模型和偏好数据分布更接近，
++ $$\beta$$很大时，策略模型和参考模型更接近
+
+在DPO中，
+
++ $$\beta$$很小时，KL惩罚力度很小，策略模型有更多自由度去探索，策略模型和偏好数据分布更接近
++ $$\beta$$很大时，KL惩罚力度很大，策略模型始终要兼顾和参考模型的距离，策略模型和参考模型更接近
