--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -143,6 +143,15 @@ prompt设计原则：
 
 ## CoT
 
+![](../assets/cot-xot-etc.png)
+
++ 思维链：CoT，Chain of Thoughts，Google提出
++ 思维树：ToT，Tree of Thoughts，普林斯顿提出，允许考虑多个不同推理路径并进行自我评估，以决定下一步行动，并在必要时前瞻或回溯
++ 思维图：GoT，Graph of Thoughts，苏黎世联邦理工学院提出，能将模型生成的信息建模为任意图结构，其中信息单元（思维）作为顶点，边对应这些顶点间的依赖关系，能有效组合任意的信息单元
++ 自我一致性CoT：Self-consistency CoT，Google提出，先生成多样化的推理路径集，然后从多个路径中选出最一致的答案
++ Auto-CoT：自动构建CoT样本，先将问题聚类，再示例采样，每个类中选择一个具有代表性的问题，并用简单的Zero-shot CoT生成相应思维链
++ 思维记忆：Memory of Thought，MoT，
++ XoT：Everything of Thoughts，
 
 # 一些常用的参数
 
