--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -211,5 +211,14 @@ prompt设计原则：
 
 详见：[https://www.daiwk.net/5.llm_agentic#gong-ju-diao-yong](https://www.daiwk.net/5.llm_agentic#gong-ju-diao-yong)
 
-# 强化学习
+# 强化学习核心知识
 
+一些概念
+
++ 马尔可夫链(MC)：下一状态只和当前状态有关，和之前时刻的状态无关
++ 马尔可夫决策过程（MDP）：马尔可夫链的基础上引入动作和奖励，4元组$$(S,A,P,R)$$
++ 部分可观测马尔可夫决策过程（POMDP）：智能体无法观测到环境的完整状态，只能看到一部分，7元组$$(S,A,T,R,\Omega,O,\gamma)$$，$$\Omega$$是观测集，智能体能观测到的所有可能结果，$$\gamma$$是折扣因子，$$T$$是转移概率，当前状态和动作下，转移到下一状态的概率
+
+常见探索利用方法
+
++ $$\epsilon$$ -greedy：以$$\epsilon$$的概率随机选一个动作，$$1-\epsilon$$的概率选择Q最大的动作
