--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -221,4 +221,15 @@ prompt设计原则：
 
 常见探索利用方法
 
-+ $$\epsilon$$ -greedy：以$$\epsilon$$的概率随机选一个动作，$$1-\epsilon$$的概率选择Q最大的动作
++ $$\epsilon$$ -greedy：以$$\epsilon$$的概率随机选一个动作，$$1-\epsilon$$的概率选择Q最大的动作；训练初期可以用大的$$\epsilon$$鼓励探索，后期减小来鼓励利用
++ 上置信界（Upper Confidence Bound, UCB）：计算每个动作的置信度上界值，将预期回报和不确定性结合，选最高上界的动作
++ 汤普森采样：从每个动作的后验概率分布中采样来选择动作
++ 熵正则化：优化目标中加入熵正则项，下次加油策略多样性和探索性，PPO算法中提到的
++ 乐观初始化：将价值函数的初始估计设置为较高值来促进探索，由于初始值被高估，算法会优先尝试未被充分探索的动作
++ 玻尔兹曼探索（Boltzmann Exploration）：引入温度系数，将动作的估计价值转化为概率分布，以概率的方式选择动作。温度较高时，各动作的概率差异较小，更倾向于探索
++ 噪声注入：OpenAI的[Parameter Space Noise for Exploration](https://arxiv.org/pdf/1706.01905)，在参数空间注入噪声，在奖励信号稀疏的任务中效果很好
+
+同/异策略、在/离线强化学习
+
+![](../assets/on-offpolicy-rl.png)
+
