--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -233,3 +233,7 @@ prompt设计原则：
 
 ![](../assets/on-offpolicy-rl.png)
 
++ 行为策略(behavior policy)：智能体与环境交互时，实际执行交互行为的策略，负责收集用于训练的数据。
++ 目标策略(target policy)：最终希望得到的策略，用来最大化长期回报。
++ 同策略：行为和目标策略是同一个策略，例如policy gradient和SARSA，因为通常依赖最新生成的经验来训练并更新策略，所以一般不能用replay buffer
++ 异策略：两个策略是不同版本或者不同类型，Q-learning/DQN都是，行为策略是$$\epsilon$$ -greedy，目标策略是最终要学习的，需要借助replay buffer
