--- a/posts/5.llm_agentic.md
+++ b/posts/5.llm_agentic.md
@@ -739,3 +739,8 @@ Universal Deep Research，输入有strategy和prompt
 工业界RL的比较通用的代码库，像OpenRLHF、trl那些可以拿来学习基本原理和跑小模型，大的模型一般还是VeRL
 
 [https://verl.readthedocs.io/en/latest/start/agentic_rl.html](https://verl.readthedocs.io/en/latest/start/agentic_rl.html)
+
+# Slime
+
+[揭秘GLM-5技术底牌：「异步强化学习框架Slime」成终极杀招](https://mp.weixin.qq.com/s/Qmg6iOYo2BXB9qFf4TOpsg?scene=1)
+
