--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -4318,6 +4318,25 @@ prefix->query的场景
 
 [Generative Dense Retrieval: Memory Can Be a Burden](https://arxiv.org/abs/2401.10487)
 
+## LightRetriever
+
+ICLR2026，[LightRetriever: A LLM-based Text Retrieval Architecture with Extremely Faster Query Inference](https://arxiv.org/abs/2505.12260)
+
+![](../assets/lightretriever.png)
+
+doc侧用完整LLM，query侧（假设query有n个token）做了如下精简：
+
++ dense检索：
+    + query的每个token分别和prompt的tokens拼一起，得到n个token序列，各自过LLM，再avg pooling得到query向量去检索。
+    + serving的时候可以把prompt x 词表过完LLM的emb缓存起来，直接查表
+
+![](../assets/lightretriever-dense.png)
+
++ sparse检索：
+    + 没有prompt了，将query的每个token直接映射成词频，doc过完llm后的emb也映射到词表大小，然后去做对比学习。
+    + serving时建的是倒排索引，即key是词，value是一个doc的list，按词频之类的倒排，query也直接用词频向量表示，query每个词去查倒排对应的doc list，再merge起来
+
+![](../assets/lightretriever-sparse.png)
 
 # 传统推荐模型
 
