--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -229,7 +229,7 @@ prompt设计原则：
 + 玻尔兹曼探索（Boltzmann Exploration）：引入温度系数，将动作的估计价值转化为概率分布，以概率的方式选择动作。温度较高时，各动作的概率差异较小，更倾向于探索
 + 噪声注入：OpenAI的[Parameter Space Noise for Exploration](https://arxiv.org/pdf/1706.01905)，在参数空间注入噪声，在奖励信号稀疏的任务中效果很好
 
-同/异策略、在/离线强化学习
+同/异策略、在/离线强化学习：
 
 ![](../assets/on-offpolicy-rl.png)
 
@@ -237,4 +237,11 @@ prompt设计原则：
 + 目标策略(target policy)：最终希望得到的策略，用来最大化长期回报。
 + 同策略：行为和目标策略是同一个策略，例如policy gradient和SARSA，因为通常依赖最新生成的经验来训练并更新策略，所以一般不能用replay buffer
 + 异策略：两个策略是不同版本或者不同类型，Q-learning/DQN都是，行为策略是$$\epsilon$$ -greedy，目标策略是最终要学习的，需要借助replay buffer
++ 在线强化学习：训练时策略持续和环境交互并收集经验，动态生成训练数据，目标策略也不断进化
++ 离线强化学习：又叫batch RL，或者fully off-policy RL，训练时智能体完全不和环境交互，仅依赖预先收集的数据。训练结束之后再将策略整体部署到线上环境中
+
+model-based/model-free：
+
++ model-based：利用环境模型进行规划和决策，例如Dyna-Q、MCTS（用于AlphaGo等）
++ model-free：直接与环境交互，学习策略或者价值函数，例如基于价值(Q-learning、DQN、SARSA)、基于策略（REINFORCE、PG、GRPO）、Actor-Critic（DDPG、PPO、A3C）
 
