--- a/posts/1.3.llm_archs.md
+++ b/posts/1.3.llm_archs.md
@@ -1144,3 +1144,9 @@ prompt-lookup decoding：[https://github.com/apoorvumang/prompt-lookup-decoding]
 
 [https://github.com/mirage-project/mirage/tree/mpk](https://github.com/mirage-project/mirage/tree/mpk)
 
+# 总结
+
+[藏在海量参数背后的系统工程：7家顶尖实验室大模型训练内参](https://mp.weixin.qq.com/s/16PcWOeShR8R8OSQOPZa7A?scene=1)
+
+[frontier model training methodologies](https://djdumpling.github.io/2026/01/31/frontier_training.html)
+
