--- a/posts/4.llm_note.md
+++ b/posts/4.llm_note.md
@@ -251,10 +251,14 @@ model-based/model-free：
 + 奖励r（reward）：t时刻执行动作后，环境给的的实时奖励，**在Sutton的教材**里记为$$R_{t+1}$$或者$$r_{t+1}$$（以下以这个为准），一般大写是随机变量，小写是观测到的具体值，另外，在别的地方也会记成$$r_t$$
 + 奖励塑形（reward shaping）：设计复杂的奖励函数以表示具体任务目标，例如短视频推荐就可以设计一个多目标融合公式
 + 回报G（gain）：到未来的累计奖励，可以加折扣，$$G_t=R_{t+1}+\gamma G_{t+1}$$
-+ 价值函数：智能体在特定状态下，或者采取特定动作获得的期望回报
++ 价值函数：
+    + $$Q_{\pi}(s,a)$$：动作价值函数，在状态s下，采取动作a，获得的期望回报
+    + $$V_{\pi}(s)$$：状态价值函数，在状态s下，采取所有可能动作获得的期望回报
++ 贝尔曼方程
 
 p.s.回头看一下reinforce recall：[Off-policy Learning in Two-stage Recommender Systems](https://www.researchgate.net/publication/341128860_Off-policy_Learning_in_Two-stage_Recommender_Systems)
 
 1. 当reward是one-step的时候，等价于监督学习下的policy gradient；
 2. 当reward是multi-step的时候（例如从列表页点击视频，进入落地页后的时长叠加），等价于TD(1)的强化学习
 
+![](../assets/reinforce-one-step-reward.png)
